--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "morgan": "~1.3.0",
     "sentiment": "^1.0.2",
     "serve-favicon": "~2.1.3",
-    "twitter": "^0.2.13"
+    "twitter": "^0.2.13",
+    "underscore": "^1.7.0",
+    "util": "^0.10.3"
   }
 }
